Position and size three.js 3d preview window correctly on mobile. Closes #26.

--- a/custom/plugins/opensceneryx/includes/osx.css
+++ b/custom/plugins/opensceneryx/includes/osx.css
@@ -73,8 +73,20 @@ div.slick-screenshots {
 }
 
 div.threejs-container {
-    width: 500px;
-    height: 500px;
     display: block;
-    float: right
+    height: 500px;
+}
+
+@media (min-width: 651px) {
+    div.threejs-container, div.threejs-container > canvas {
+        width: 500px;
+        float: right;
+    }
+}
+
+@media (max-width: 650px) {
+    div.threejs-container, div.threejs-container > canvas {
+        width: 100%;
+        float: none;
+    }
 }
